--- a/conversion.html
+++ b/conversion.html
@@ -1,10 +1,90 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.6.0.js"></script>
+  <script src="js/scripts.js"></script>
   <title>Conversion</title>
 </head>
 <body>
-  <h1>Conversion</h1>
-  <script src="js/scripts.js"></script> 
+  <div class="container">
+    <h1>Conversion</h1>
+    <div>
+      <form id="f2c-form">
+        <div class="form-group">
+          <label for="convertFromFarenheit">Farenheit to Celsius</label>
+          <input id="convertFromFarenheit" class="form-control" type="text">
+          <button type="submit" class="btn">Calculate</button>
+        </div>
+      </form>
+      <form id="c2f-form">
+        <div class="form-group">
+          <label for="convertFromCelsius">Celsius to Farenheit</label>
+          <input id="convertFromCelsius" class="form-control" type="text">
+          <button type="submit" class="btn">Calculate</button>
+        </div>
+      </form>
+      <form id="o2p-form">
+        <div class="form-group">
+          <label for="convertOuncesPounds">Ounces to Pounds</label>
+          <input id="convertOuncesPounds" class="form-control" type="text">
+          <button type="submit" class="btn">Calculate</button>
+        </div>
+      </form> 
+      <form id="o2g-form">  
+        <div class="form-group">
+          <label for="convertOuncesGrams">Ounces to Grams</label>
+          <input id="convertOuncesGrams" class="form-control" type="text">
+          <button type="submit" class="btn">Calculate</button>
+        </div>
+      </form>
+      <form id="p2o-form">  
+        <div class="form-group">
+          <label for="convertPoundsOunces">Pounds to Ounces</label>
+          <input id="convertPoundsOunces" class="form-control" type="text">
+          <button type="submit" class="btn">Calculate</button>
+        </div>
+      </form>
+      <form id="p2g-form">  
+        <div class="form-group">
+          <label for="convertPoundsGrams">Pounds to Grams</label>
+          <input id="convertPoundsGrams" class="form-control" type="text">
+          <button type="submit" class="btn">Calculate</button>
+        </div>
+      </form>
+      <form id="f2cups-form">  
+        <div class="form-group">
+          <label for="convertFlouncesCups">Fluid oz to Cups</label>
+          <input id="convertFlouncesCups" class="form-control" type="text">
+          <button type="submit" class="btn">Calculate</button>
+        </div>
+      </form>
+      <form id="f2m-form">  
+        <div class="form-group">
+          <label for="convertFlouncesMl">Fluid oz to Ml</label>
+          <input id="convertFlouncesMl" class="form-control" type="text">
+          <button type="submit" class="btn">Calculate</button>
+        </div>
+      </form>
+      <form id="c2f-form">  
+        <div class="form-group">
+          <label for="convertCupsFlounces">Cups to Fluid oz</label>
+          <input id="convertCupsFlounces" class="form-control" type="text">
+          <button type="submit" class="btn">Calculate</button>
+        </div>
+      </form>
+      <form id="c2m-form">  
+        <div class="form-group">
+          <label for="convertCupsMl">Cups to Ml</label>
+          <input id="convertCupsMl" class="form-control" type="text">
+          <button type="submit" class="btn">Calculate</button>
+        </div>
+      </form>
+      <div id="output">
+        
+      </div>
+    </div>
+  </div>
 </body>
 </html>
